[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/quick_question.gd" type="Script" id=1]
[ext_resource path="res://fonts/lato_normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/grabber_selected.svg" type="Texture" id=3]
[ext_resource path="res://assets/grabber_neutral.svg" type="Texture" id=4]
[ext_resource path="res://assets/y_button_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/d_pad.png" type="Texture" id=6]
[ext_resource path="res://themes/gui_button.tres" type="Theme" id=7]

[node name="quick_question" type="Panel"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 28.0
margin_top = 100.881
margin_right = 1889.0
margin_bottom = 741.881
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="trust" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="trust"]
margin_left = 177.744
margin_top = 27.6702
margin_right = 1674.74
margin_bottom = 148.67
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Please indicate your trust toward the agent"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="trust"]
margin_left = 206.896
margin_top = 213.398
margin_right = 1158.9
margin_bottom = 243.398
rect_scale = Vector2( 1.5, 2 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="min" type="Label" parent="trust/HSlider"]
margin_left = -151.679
margin_top = -16.0
margin_right = 466.321
margin_bottom = 381.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "My trust
in the agent is
Very low"
align = 1
valign = 1

[node name="left" type="Label" parent="trust/HSlider"]
margin_left = 164.023
margin_top = 22.0
margin_right = 691.023
margin_bottom = 419.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
My trust
in the agent is
Below Average"
align = 1
valign = 1

[node name="mid" type="Label" parent="trust/HSlider"]
margin_left = 404.186
margin_top = 22.0
margin_right = 882.186
margin_bottom = 419.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
My trust
in the agent is
Average"
align = 1
valign = 1

[node name="right" type="Label" parent="trust/HSlider"]
margin_left = 627.929
margin_top = 22.0
margin_right = 1161.93
margin_bottom = 419.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
My trust
in the agent is
Above Average"
align = 1
valign = 1

[node name="max" type="Label" parent="trust/HSlider"]
margin_left = 943.626
margin_top = -16.0
margin_right = 1421.63
margin_bottom = 381.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "My trust
in the agent is
Very High"
align = 1
valign = 1

[node name="middle_marker" type="Line2D" parent="trust/HSlider"]
position = Vector2( 470.251, -35.569 )
scale = Vector2( 0.666667, 0.244942 )
z_index = 2
points = PoolVector2Array( 9.11377, 45.1832, 9.03392, 90.3044, 9.03394, 112.989 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="middle_marker2" type="Line2D" parent="trust/HSlider/middle_marker"]
position = Vector2( 0.598755, 220.126 )
scale = Vector2( 1, 0.542123 )
z_index = 2
points = PoolVector2Array( 9.22815, 81.426, 9.16345, 205.37 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="difficulty" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="difficulty"]
margin_left = 176.074
margin_top = 24.3298
margin_right = 1673.07
margin_bottom = 145.33
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "How difficult was the task?"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="difficulty"]
margin_left = 206.896
margin_top = 213.398
margin_right = 1158.9
margin_bottom = 243.398
rect_scale = Vector2( 1.5, 2 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
value = 50.0
scrollable = false
ticks_on_borders = true

[node name="min" type="Label" parent="difficulty/HSlider"]
margin_left = -159.539
margin_top = -35.4802
margin_right = 458.461
margin_bottom = 361.52
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Not difficult
at all"
align = 1
valign = 1

[node name="left" type="Label" parent="difficulty/HSlider"]
margin_left = 164.023
margin_top = 22.0
margin_right = 691.023
margin_bottom = 419.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
Slightly
difficult"
align = 1
valign = 1

[node name="mid" type="Label" parent="difficulty/HSlider"]
margin_left = 405.161
margin_top = 22.0
margin_right = 883.161
margin_bottom = 419.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
Moderatly
difficult"
align = 1
valign = 1

[node name="right" type="Label" parent="difficulty/HSlider"]
margin_left = 627.929
margin_top = 22.7933
margin_right = 1161.93
margin_bottom = 419.793
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
Very
Difficult"
align = 1
valign = 1

[node name="max" type="Label" parent="difficulty/HSlider"]
margin_left = 932.621
margin_top = -34.4549
margin_right = 1410.63
margin_bottom = 362.545
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Very
difficult"
align = 1
valign = 1

[node name="middle_marker" type="Line2D" parent="difficulty/HSlider"]
position = Vector2( 470.251, -35.569 )
scale = Vector2( 0.666667, 0.244942 )
z_index = 2
points = PoolVector2Array( 9.11377, 45.1832, 9.03392, 90.3044, 9.03394, 112.989 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="middle_marker2" type="Line2D" parent="difficulty/HSlider/middle_marker"]
position = Vector2( 0.598755, 220.126 )
scale = Vector2( 1, 0.542123 )
z_index = 2
points = PoolVector2Array( 9.22815, 81.426, 9.16345, 205.37 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="reliance" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="reliance"]
margin_left = 177.744
margin_top = 27.6702
margin_right = 1674.74
margin_bottom = 148.67
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "How much did you rely on the agent?"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="reliance"]
margin_left = 206.896
margin_top = 213.398
margin_right = 1158.9
margin_bottom = 243.398
rect_scale = Vector2( 1.5, 2 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
value = 50.0
scrollable = false
ticks_on_borders = true

[node name="min" type="Label" parent="reliance/HSlider"]
margin_left = -151.679
margin_top = -16.0
margin_right = 466.321
margin_bottom = 381.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Not at all"
align = 1
valign = 1

[node name="left" type="Label" parent="reliance/HSlider"]
margin_left = 164.023
margin_top = 22.0
margin_right = 691.023
margin_bottom = 419.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
I slightly
relied on the
agent"
align = 1
valign = 1

[node name="mid" type="Label" parent="reliance/HSlider"]
margin_left = 405.161
margin_top = 23.0758
margin_right = 883.161
margin_bottom = 420.076
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
I moderatly
relied on the
agent"
align = 1
valign = 1

[node name="right" type="Label" parent="reliance/HSlider"]
margin_left = 627.929
margin_top = 22.7933
margin_right = 1161.93
margin_bottom = 419.793
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
I very much
relied on the
agent"
align = 1
valign = 1

[node name="max" type="Label" parent="reliance/HSlider"]
margin_left = 943.626
margin_top = -16.0
margin_right = 1421.63
margin_bottom = 381.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "A lot"
align = 1
valign = 1

[node name="middle_marker" type="Line2D" parent="reliance/HSlider"]
position = Vector2( 470.251, -35.569 )
scale = Vector2( 0.666667, 0.244942 )
z_index = 2
points = PoolVector2Array( 9.11377, 45.1832, 9.03392, 90.3044, 9.03394, 112.989 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="middle_marker2" type="Line2D" parent="reliance/HSlider/middle_marker"]
position = Vector2( 0.598755, 220.126 )
scale = Vector2( 1, 0.542123 )
z_index = 2
points = PoolVector2Array( 9.22815, 81.426, 9.16345, 205.37 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="usefulness" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="usefulness"]
margin_left = 177.744
margin_top = 27.6702
margin_right = 1674.74
margin_bottom = 148.67
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "How useful did you find the agent?"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="usefulness"]
margin_left = 208.566
margin_top = 211.728
margin_right = 1160.57
margin_bottom = 241.728
rect_scale = Vector2( 1.5, 2 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
value = 50.0
scrollable = false
ticks_on_borders = true

[node name="min" type="Label" parent="usefulness/HSlider"]
margin_left = -153.046
margin_top = -20.1011
margin_right = 464.954
margin_bottom = 376.899
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Not at all
useful"
align = 1
valign = 1

[node name="left" type="Label" parent="usefulness/HSlider"]
margin_left = 162.91
margin_top = 22.835
margin_right = 689.91
margin_bottom = 419.835
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
Slightly
useful"
align = 1
valign = 1

[node name="mid" type="Label" parent="usefulness/HSlider"]
margin_left = 404.048
margin_top = 22.835
margin_right = 882.048
margin_bottom = 419.835
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
Moderatly
useful"
align = 1
valign = 1

[node name="right" type="Label" parent="usefulness/HSlider"]
margin_left = 626.816
margin_top = 23.6283
margin_right = 1160.82
margin_bottom = 420.628
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|
Very
useful"
align = 1
valign = 1

[node name="max" type="Label" parent="usefulness/HSlider"]
margin_left = 947.727
margin_top = -22.1517
margin_right = 1425.73
margin_bottom = 374.848
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Extremely
useful"
align = 1
valign = 1

[node name="middle_marker" type="Line2D" parent="usefulness/HSlider"]
position = Vector2( 470.251, -35.569 )
scale = Vector2( 0.666667, 0.244942 )
z_index = 2
points = PoolVector2Array( 9.11377, 45.1832, 9.03392, 90.3044, 9.03394, 112.989 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="middle_marker2" type="Line2D" parent="usefulness/HSlider/middle_marker"]
position = Vector2( 0.598755, 220.126 )
scale = Vector2( 1, 0.542123 )
z_index = 2
points = PoolVector2Array( 9.22815, 81.426, 9.16345, 205.37 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="template" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="header" type="Label" parent="template"]
margin_left = 317.489
margin_top = 7.88776
margin_right = 2748.49
margin_bottom = 104.888
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 1 )
text = "<header>"
align = 1
autowrap = true

[node name="progress" type="Label" parent="template"]
margin_left = 1702.04
margin_top = 2.0
margin_right = 1963.04
margin_bottom = 99.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.654902, 0.654902, 0.654902, 1 )
text = "? / ?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Label" parent="template"]
margin_left = 66.0
margin_top = 130.0
margin_right = 2357.0
margin_bottom = 399.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<question>"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="template"]
margin_left = 212.505
margin_top = 361.013
margin_right = 1164.51
margin_bottom = 398.013
rect_scale = Vector2( 1.5, 2 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
value = 50.0
scrollable = false
tick_count = 7
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="l0" type="Label" parent="template/HSlider"]
margin_left = -94.0
margin_top = 30.0
margin_right = 647.0
margin_bottom = 372.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<label1>"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="l1" type="Label" parent="template/HSlider"]
margin_left = 104.662
margin_top = 30.0
margin_right = 544.662
margin_bottom = 127.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<label2>"
align = 1
valign = 1

[node name="l2" type="Label" parent="template/HSlider"]
margin_left = 257.781
margin_top = 30.0
margin_right = 697.781
margin_bottom = 127.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<label3>"
align = 1
valign = 1

[node name="l3" type="Label" parent="template/HSlider"]
margin_left = 407.371
margin_top = 30.0
margin_right = 847.371
margin_bottom = 127.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<label4>"
align = 1
valign = 1

[node name="l4" type="Label" parent="template/HSlider"]
margin_left = 564.98
margin_top = 30.0
margin_right = 1004.98
margin_bottom = 127.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<label5>"
align = 1
valign = 1

[node name="l5" type="Label" parent="template/HSlider"]
margin_left = 720.43
margin_top = 30.0
margin_right = 1160.43
margin_bottom = 127.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<label6>"
align = 1
valign = 1

[node name="l6" type="Label" parent="template/HSlider"]
margin_left = 837.667
margin_top = 30.0
margin_right = 1587.67
margin_bottom = 399.0
rect_scale = Vector2( 0.3, 0.25 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<label7>"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="middle_marker" type="Line2D" parent="template/HSlider"]
visible = false
position = Vector2( 470.251, -21.069 )
scale = Vector2( 0.666667, 0.244942 )
z_index = 2
points = PoolVector2Array( 9.11377, 45.1832, 9.03392, 90.3044, 9.03394, 112.989 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="middle_marker2" type="Line2D" parent="template/HSlider/middle_marker"]
visible = false
position = Vector2( 0.598755, 220.126 )
scale = Vector2( 1, 0.542123 )
z_index = 2
points = PoolVector2Array( 9.22815, 81.426, 9.16345, 205.37 )
width = 3.0
default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
texture_mode = 1

[node name="Button" type="Button" parent="."]
margin_left = 743.963
margin_top = 507.86
margin_right = 1187.95
margin_bottom = 613.86
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="y_button_label" type="Label" parent="."]
visible = false
margin_left = 359.603
margin_top = 544.191
margin_right = 1935.6
margin_bottom = 641.191
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.823529, 0.772549, 0, 1 )
text = "Rate this statement and press          to continue"
align = 1
valign = 1

[node name="y_button_icon" type="Sprite" parent="y_button_label"]
position = Vector2( 1097.31, 52.2689 )
scale = Vector2( 0.357143, 0.357143 )
texture = ExtResource( 5 )

[node name="blink" type="Tween" parent="."]

[node name="cross_label" type="Label" parent="."]
visible = false
margin_left = 1499.63
margin_top = 476.603
margin_right = 2459.63
margin_bottom = 873.603
rect_scale = Vector2( 0.35, 0.35 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.976471, 0, 1 )
text = "To rate the scale,
please use:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cross_button" type="Sprite" parent="cross_label"]
visible = false
position = Vector2( 859.461, 306.248 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
[connection signal="changed" from="template/HSlider" to="." method="_on_HSlider_changed"]
[connection signal="value_changed" from="template/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
